added example metad

--- a/examples/notebooks/study_torsional_angles.ipynb
+++ b/examples/notebooks/study_torsional_angles.ipynb
@@ -5,17 +5,17 @@
    "id": "7be51adf-8715-4668-aac9-f12d07cbc35b",
    "metadata": {},
    "source": [
-    "# Study torsional angles of organic molecules\n",
+    "# Study Torsional Angles of Organic Molecules\n",
     "\n",
     "In this example we will create a solute-in-solvent system and we will use unbiased molecular dynamics (MD) and metadynamics (MetaD) simulations to study the conformational space of the solute molecules.\n",
     "\n",
     "\n",
     "In this example we will see how to:  \n",
-    "**1)** create a new project object;  \n",
-    "**2)** add a new system object to the project;  \n",
-    "**3)** create from scratch a system of arbitrary composition;  \n",
-    "**4)** prepare the files necessary to run MD simulations;  \n",
-    "**5)** define a TORSION collective variable and use it to estimate parameters for MetaD simulations;  \n"
+    "1) create a new project object;  \n",
+    "2) add a new system object to the project;  \n",
+    "3) create from scratch a system of arbitrary composition;  \n",
+    "4) prepare the files necessary to run MD simulations;  \n",
+    "5) define a TORSION collective variable and use it to estimate parameters for MetaD simulations;  \n"
    ]
   },
   {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "907867fc",
+   "id": "f7a71f6a",
    "metadata": {
     "tags": []
    },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34e8979",
+   "id": "5a294e17",
    "metadata": {},
    "source": [
     "## 3. Create an initial configuration from scratch\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d2cf394",
+   "id": "90d1abc4",
    "metadata": {},
    "source": [
     "### 3.2 Solvate the system\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7116d460",
+   "id": "41361ac2",
    "metadata": {},
    "source": [
     "## 4. Create the files and directories needed to run MD simulations\n",
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7717d91c",
+   "id": "660e0e63",
    "metadata": {
     "tags": []
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbbecc45",
+   "id": "88be6180",
    "metadata": {},
    "source": [
     "## 5. Prepare simulation scripts\n",
@@ -513,31 +513,14 @@
     "- **'myriad'** and 'archer' use an internal template for UCL Myriad and Archer2 platforms to create the respective job scripts. These can be used as starting points for other GridEngine ('myriad') and SLURM ('archer') based systems after some tweakings.  \n",
     "- **'custom'** reads a user provided job script template and adds to it the bash commands to run the simulations.  \n",
     "\n",
-    "In this example we create a script for Myriad, asking for 12 hours, 12 cores, 6 OMP th"
+    "In this example we create a script for Myriad, asking for 12 hours, 12 cores, 6 OMP threads per MPI rank, and use gmx_mpi as binary of gromacs. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f090493",
+   "execution_count": 26,
+   "id": "1a01df6f",
    "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "myriad_dict={'wallclock':'12:00:00',\n",
-    "             'job_name':s.name,\n",
-    "             'mpi':12,\n",
-    "             'omp':6,\n",
-    "             'gmx_bin':'gmx_mpi'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "23599356-f9f6-45f4-9d1e-895716289dc2",
-   "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -550,6 +533,12 @@
     }
    ],
    "source": [
+    "myriad_dict={'wallclock':'12:00:00',\n",
+    "             'job_name':s.name,\n",
+    "             'mpi':12,\n",
+    "             'omp':6,\n",
+    "             'gmx_bin':'gmx_mpi'}\n",
+    "\n",
     "s.create_run_script('run.myriad',platform='myriad',platform_dict=myriad_dict)"
    ]
   },
@@ -558,12 +547,14 @@
    "id": "b30468c7-8b0a-44d3-ba9f-46c52126257d",
    "metadata": {},
    "source": [
-    "Finally we can save the project and run the simulations on our HPC system of choice."
+    "## Save the project\n",
+    "\n",
+    "We can save the project with the **Project.save()** method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "ce7ae70e-1167-4796-8f55-0939585d5459",
    "metadata": {
     "tags": []
