added example import configuration

--- a/examples/notebooks/Study_torsional_angles.ipynb
+++ b/examples/notebooks/Study_torsional_angles.ipynb
@@ -33,12 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "9c4448e6-6868-4297-9b37-b56637482b26",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "99c127ab1a07413dbd1d34a298ff5427",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from sim_launch_py.classes import Project\n",
     "from sim_launch_py.external import molecules as mols\n",
@@ -64,12 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "85b5e3a8-ccc0-4482-ae6c-b9309cd1e000",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RDKit WARNING: [18:57:11] Enabling RDKit 2019.09.3 jupyter extensions\n",
+      "[18:57:11] Enabling RDKit 2019.09.3 jupyter extensions\n"
+     ]
+    }
+   ],
    "source": [
     "mols_path=\"/home/matteo/Work/organic_molecules_simulations/examples\"\n",
     "\n",
@@ -88,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "f8d94296-910c-4718-9316-5b8c325c79dd",
    "metadata": {
     "tags": []
@@ -97,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "645378073cf144dbb6641339fdf5f236",
+       "model_id": "9d2bc47038184ce7b2012d9b1c330fb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +127,7 @@
        "VBox(children=(HBox(children=(NGLWidget(), NGLWidget())),))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "5bb457de-612e-4526-894a-46ebcbc1f48f",
    "metadata": {
     "scrolled": true,
@@ -182,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "f7a71f6a",
    "metadata": {
     "tags": []
@@ -230,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "2cc1b304-8432-4301-b71c-b3781e3bdc80",
    "metadata": {
     "scrolled": true,
@@ -247,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4d48e09983e4f6eaf69e1b66e88001b",
+       "model_id": "2bc02ffaf0fe431984f4d993942e7cee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +277,7 @@
        "VBox(children=(HBox(children=(NGLWidget(),)),))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "55e13e8e-506b-477c-bf44-7f0810d134fd",
    "metadata": {
     "scrolled": true,
@@ -305,7 +327,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f79757592a6d456d968304798039cfd1",
+       "model_id": "8838aa367c7b40cf8d8f4dca80151089",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +335,7 @@
        "VBox(children=(HBox(children=(NGLWidget(),)),))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "df2b9f3e-841f-4bc8-9aeb-9c9efec02730",
    "metadata": {
     "scrolled": true,
@@ -407,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "61f091ea-e7b1-482d-99cc-139c315e95ec",
    "metadata": {
     "scrolled": true,
@@ -483,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "660e0e63",
    "metadata": {
     "tags": []
@@ -518,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "1a01df6f",
    "metadata": {
     "tags": []
@@ -554,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "ce7ae70e-1167-4796-8f55-0939585d5459",
    "metadata": {
     "tags": []
