--- a/examples/notebooks/Import_and_modify_structure.ipynb
+++ b/examples/notebooks/Import_and_modify_structure.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2918fa6c4aad41dba022f45313bccb98",
+       "model_id": "9435a6e73c504513a2d5abda338da6a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "861bb45326ab4c6bb5a4ace1c7db9bf2",
+       "model_id": "d25c2915977f44f5aae213f7c2a0a624",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "520dcc9ffcf246c4887a404cefb61e2f",
+       "model_id": "9db193bb074344d8a455b8b0c9d163d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9d0ef2f1eea4414a9d3d71648e5d6ec",
+       "model_id": "7a92347f167248c6abe4bf5402e786c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,7 +310,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09d7ee14d1dd42d5a7bbc1e908e232a5",
+       "model_id": "42ca799963e24cb99bba8c78bc2d438f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,8 +356,8 @@
       "Deleting 10 molecules from system seed_form_IV.\n",
       "Now system seed_form_IV has 1126 molecules\n",
       "1250 molecules of residue ETH have been added. The file Systems/seed_form_IV/with_ethanol.pdb has been created.\n",
-      "Deleting 9 molecules from system seed_form_IV.\n",
-      "Now system seed_form_IV has 2367 molecules\n"
+      "Deleting 11 molecules from system seed_form_IV.\n",
+      "Now system seed_form_IV has 2365 molecules\n"
      ]
     }
    ],
@@ -421,7 +421,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2ea47602d274dab9745816554eb4cf1",
+       "model_id": "d8435353f9ea4f7ca5305fb6d9ae09a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -453,7 +453,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "24e8241f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
