--- a/examples/notebooks/Run_metad_simulations.ipynb
+++ b/examples/notebooks/Run_metad_simulations.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "023742de",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
     "\n",
     "    # duplicate dihedral cvs used in MD simulation\n",
     "    newcv=deepcopy(sim.cvs[idih])\n",
-    "    sim.cvs.append(newcv)\n",
+    "    newsim.cvs.append(newcv)\n",
     "\n",
     "    metadbias_dict={'sigma':sig,\n",
     "                    'height':2.5,\n",
@@ -215,9 +215,9 @@
     "                    'pace':500,\n",
     "                    'hills_file':'HILLS_dih_{}'.format(idih)}\n",
     "\n",
-    "    newsim.add_bias('metad_dih_{}'.format(idih),'METAD',sim.cvs[-1].name,bias_dict=metadbias_dict)\n",
+    "    newsim.add_bias('metad_dih_{}'.format(idih),'METAD',newsim.cvs[-1].name,bias_dict=metadbias_dict)\n",
     "\n",
-    "wrtplumed('{}/plumed.dat'.format(sim.path),newsim,colvar='COLVAR')\n"
+    "wrtplumed('{}/plumed.dat'.format(newsim.path),newsim,colvar='COLVAR') #### STAMPARE ANCHE I METAD.BIAS\n"
    ]
   },
   {
@@ -234,9 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "13cfcf0e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -258,6 +260,39 @@
     "             'gmx_bin':'gmx_mpi'}\n",
     "\n",
     "s.create_run_script('run_metad.myriad',platform='myriad',platform_dict=myriad_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f2d9f826-343d-4240-b9c5-4f86e8aaeea7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_name': 'metad_dih_0',\n",
+       " '_biastype': 'METAD',\n",
+       " 'directive': 'METAD ...\\n    ARG=dih_0,\\n    FILE=HILLS_dih_0\\n    SIGMA=0.284,\\n    HEIGHT=2.5\\n    PACE=500\\n    BIASFACTOR=5\\n    TEMP=300.0\\n    GRID_MIN=-pi,\\n    GRID_MAX=pi,\\n    GRID_SPACING=0.0349,\\n... METAD\\n'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newsim.biases[0].__dict__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ebbe5a8-a5ce-4745-b1e0-bff4c3d9e527",
+   "metadata": {},
+   "source": [
+    "run `gmx`"
    ]
   }
  ],
